@@ -1,3 +1,7 @@
 # Super-Simple
 A (simple) Java game created by Simon CHANTHRABOUTH-LIEBBE for the CY-Tech informatic project ING1.
 This project use the JavaFx library. 
+### Execution of the .jar file :
+Please use the following command : 
+```bash
+java --module-path "link_to_your_javafx_lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml -jar SuperSimple.jar
